@@ -16,7 +16,7 @@
  */
 package org.finos.fluxnova.bpm.engine.rest.sub.runtime.impl;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
+import tools.jackson.databind.ObjectMapper;
 import org.finos.fluxnova.bpm.engine.CaseService;
 import org.finos.fluxnova.bpm.engine.ProcessEngine;
 import org.finos.fluxnova.bpm.engine.ProcessEngineException;
@@ -35,7 +35,7 @@ import org.finos.fluxnova.bpm.engine.runtime.CaseExecution;
 import org.finos.fluxnova.bpm.engine.runtime.CaseExecutionCommandBuilder;
 import org.finos.fluxnova.bpm.engine.variable.value.TypedValue;
 
-import javax.ws.rs.core.Response.Status;
+import jakarta.ws.rs.core.Response.Status;
 import java.util.List;
 import java.util.Map;
 
@@ -195,12 +195,12 @@ public class CaseExecutionResourceImpl implements CaseExecutionResource {
   }
 
   protected InvalidRequestException createInvalidRequestException(String transition, Status status, ProcessEngineException cause) {
-    String errorMessage = String.format("Cannot %s case execution %s: %s", transition, caseExecutionId, cause.getMessage());
+    String errorMessage = "Cannot %s case execution %s: %s".formatted(transition, caseExecutionId, cause.getMessage());
     return new InvalidRequestException(status, cause, errorMessage);
   }
 
   protected RestException createRestException(String transition, Status status, ProcessEngineException cause) {
-    String errorMessage = String.format("Cannot %s case execution %s: %s", transition, caseExecutionId, cause.getMessage());
+    String errorMessage = "Cannot %s case execution %s: %s".formatted(transition, caseExecutionId, cause.getMessage());
     return new RestException(status, cause, errorMessage);
   }
 
@@ -230,7 +230,7 @@ public class CaseExecutionResourceImpl implements CaseExecutionResource {
         }
 
       } catch (RestException e) {
-        String errorMessage = String.format("Cannot %s case execution %s due to invalid variable %s: %s", transition, caseExecutionId, variableName, e.getMessage());
+        String errorMessage = "Cannot %s case execution %s due to invalid variable %s: %s".formatted(transition, caseExecutionId, variableName, e.getMessage());
         throw new RestException(e.getStatus(), e, errorMessage);
 
       }
