@@ -79,6 +79,7 @@ import org.finos.fluxnova.bpm.engine.impl.tree.TreeVisitor;
 import org.finos.fluxnova.bpm.engine.impl.util.BitMaskUtil;
 import org.finos.fluxnova.bpm.engine.impl.util.CollectionUtil;
 import org.finos.fluxnova.bpm.engine.impl.util.EnsureUtil;
+import org.finos.fluxnova.bpm.engine.impl.variable.InternalVariableContext;
 import org.finos.fluxnova.bpm.engine.impl.variable.VariableDeclaration;
 import org.finos.fluxnova.bpm.engine.repository.ProcessDefinition;
 import org.finos.fluxnova.bpm.engine.runtime.Execution;
@@ -605,8 +606,8 @@ public class ExecutionEntity extends PvmExecutionImpl implements Execution, Proc
   @Override
   @SuppressWarnings("deprecation")
   public <T extends CoreExecution> void performOperation(CoreAtomicOperation<T> operation) {
-    if (operation instanceof AtomicOperation) {
-      performOperation((AtomicOperation) operation);
+    if (operation instanceof AtomicOperation atomicOperation) {
+      performOperation(atomicOperation);
     } else {
       super.performOperation(operation);
     }
@@ -615,8 +616,8 @@ public class ExecutionEntity extends PvmExecutionImpl implements Execution, Proc
   @Override
   @SuppressWarnings("deprecation")
   public <T extends CoreExecution> void performOperationSync(CoreAtomicOperation<T> operation) {
-    if (operation instanceof AtomicOperation) {
-      performOperationSync((AtomicOperation) operation);
+    if (operation instanceof AtomicOperation atomicOperation) {
+      performOperationSync(atomicOperation);
     } else {
       super.performOperationSync(operation);
     }
@@ -783,8 +784,8 @@ public class ExecutionEntity extends PvmExecutionImpl implements Execution, Proc
     this.processDefinition = processDefinition;
     if (processDefinition != null) {
       this.processDefinitionId = processDefinition.getId();
-      if (processDefinition instanceof ProcessDefinitionEntity) {
-        this.processDefinitionKey = ((ProcessDefinitionEntity) processDefinition).getKey();
+      if (processDefinition instanceof ProcessDefinitionEntity entity) {
+        this.processDefinitionKey = entity.getKey();
       }
     }
     else {
@@ -1231,37 +1232,43 @@ public class ExecutionEntity extends PvmExecutionImpl implements Execution, Proc
   }
 
   protected void moveVariablesTo(ExecutionEntity other) {
-    List<VariableInstanceEntity> variables = variableStore.getVariables();
-    variableStore.removeVariables();
+    InternalVariableContext.executeAsInternalWrite(() -> {
+      List<VariableInstanceEntity> variables = variableStore.getVariables();
+      variableStore.removeVariables();
 
-    for (VariableInstanceEntity variable : variables) {
-      moveVariableTo(variable, other);
-    }
+      for (VariableInstanceEntity variable : variables) {
+        moveVariableTo(variable, other);
+      }
+    });
   }
 
   protected void moveVariableTo(VariableInstanceEntity variable, ExecutionEntity other) {
-    if (other.variableStore.containsKey(variable.getName())) {
-      CoreVariableInstance existingInstance = other.variableStore.getVariable(variable.getName());
-      existingInstance.setValue(variable.getTypedValue(false));
-      invokeVariableLifecycleListenersUpdate(existingInstance, this);
-      invokeVariableLifecycleListenersDelete(
-          variable,
-          this,
-          Collections.singletonList(getVariablePersistenceListener()));
-    }
-    else {
-      other.variableStore.addVariable(variable);
-    }
+    InternalVariableContext.executeAsInternalWrite(() -> {
+      if (other.variableStore.containsKey(variable.getName())) {
+        CoreVariableInstance existingInstance = other.variableStore.getVariable(variable.getName());
+        existingInstance.setValue(variable.getTypedValue(false));
+        invokeVariableLifecycleListenersUpdate(existingInstance, this);
+        invokeVariableLifecycleListenersDelete(
+                variable,
+                this,
+                Collections.singletonList(getVariablePersistenceListener()));
+      }
+      else {
+        other.variableStore.addVariable(variable);
+      }
+    });
   }
 
   protected void moveConcurrentLocalVariablesTo(ExecutionEntity other) {
-    List<VariableInstanceEntity> variables = variableStore.getVariables();
+    InternalVariableContext.executeAsInternalWrite(() -> {
+      List<VariableInstanceEntity> variables = variableStore.getVariables();
 
-    for (VariableInstanceEntity variable : variables) {
-      if (variable.isConcurrentLocal()) {
-        moveVariableTo(variable, other);
+      for (VariableInstanceEntity variable : variables) {
+        if (variable.isConcurrentLocal()) {
+          moveVariableTo(variable, other);
+        }
       }
-    }
+    });
   }
 
   // variables ////////////////////////////////////////////////////////////////
@@ -1344,7 +1351,7 @@ public class ExecutionEntity extends PvmExecutionImpl implements Execution, Proc
       Collection<ExternalTaskEntity> externalTasks) {
 
     EnsureUtil.ensureNotEmpty(NullValueException.class,
-        String.format("Cannot restore state of process instance %s", processInstanceId),
+      "Cannot restore state of process instance %s".formatted(processInstanceId),
         "list of executions", executions);
 
     if(!isProcessInstanceExecution()) {
