@@ -1197,7 +1197,7 @@ public class TaskEntity extends AbstractVariableScope implements Task, DelegateT
 
     case STATE_INIT:
     default:
-      throw new ProcessEngineException(String.format("Task %s cannot transition into state %s.", id, state));
+      throw new ProcessEngineException("Task %s cannot transition into state %s.".formatted(id, state));
     }
   }
 
@@ -1436,14 +1436,23 @@ public class TaskEntity extends AbstractVariableScope implements Task, DelegateT
   }
 
   public void initializeFormKey() {
+    initializeFormKey(true);
+  }
+
+  public void initializeFormKey(boolean evaluateFormKey) {
     isFormKeyInitialized = true;
     if(taskDefinitionKey != null) {
       TaskDefinition taskDefinition = getTaskDefinition();
       if(taskDefinition != null) {
         // initialize formKey
         Expression formKey = taskDefinition.getFormKey();
-        if(formKey != null) {
-          this.formKey = (String) formKey.getValue(this);
+        if(evaluateFormKey && formKey != null) {
+          try {
+            this.formKey = (String) formKey.getValue(this);
+          } catch (Exception e) {
+            LOG.logFormKeyExpressionEvaluationException(id, formKey.getExpressionText(), e);
+            this.formKey = null;
+          }
         } else {
           // initialize form reference
           Expression formRef = taskDefinition.getFluxnovaFormDefinitionKey();
