@@ -121,7 +121,26 @@ public abstract class ReflectUtil {
     }
   }
 
+    /**
+     * Validates that a resource name does not contain path traversal sequences (CWE-73 fix).
+     * Throws ProcessEngineException if the name is null or contains '..' segments.
+     */
+    public static void validateResourceName(String name) {
+        if (name == null) {
+            throw new ProcessEngineException("Resource name must not be null");
+        }
+        // Normalize separators and check for path traversal sequences
+        String normalized = name.replace('\\', '/');
+        for (String segment : normalized.split("/")) {
+            if ("..".equals(segment)) {
+                throw new ProcessEngineException(
+                        "Resource name contains illegal path traversal sequence: " + name);
+            }
+        }
+    }
+
   public static InputStream getResourceAsStream(String name) {
+    validateResourceName(name);
     InputStream resourceStream = null;
     ClassLoader classLoader = getCustomClassLoader();
     if(classLoader != null) {
@@ -141,33 +160,35 @@ public abstract class ReflectUtil {
     return resourceStream;
    }
 
-  public static URL getResource(String name) {
-    URL url = null;
-    ClassLoader classLoader = getCustomClassLoader();
-    if(classLoader != null) {
-      url = classLoader.getResource(name);
-    }
-    if(url == null) {
-      // Try the current Thread context classloader
-      classLoader = Thread.currentThread().getContextClassLoader();
-      url = classLoader.getResource(name);
-      if(url == null) {
-        // Finally, try the classloader for this class
-        classLoader = ReflectUtil.class.getClassLoader();
-        url = classLoader.getResource(name);
-      }
+   public static URL getResource(String name) {
+     validateResourceName(name);
+     URL url = null;
+     ClassLoader classLoader = getCustomClassLoader();
+     if(classLoader != null) {
+       url = classLoader.getResource(name);
+     }
+     if(url == null) {
+       // Try the current Thread context classloader
+       classLoader = Thread.currentThread().getContextClassLoader();
+       url = classLoader.getResource(name);
+       if(url == null) {
+         // Finally, try the classloader for this class
+         classLoader = ReflectUtil.class.getClassLoader();
+         url = classLoader.getResource(name);
+       }
+     }
+
+     return url;
     }
 
-    return url;
+   public static String getResourceUrlAsString(String name) {
+     String url = getResource(name).toString();
+     // Use replace() instead of replaceAll() to prevent regex injection
+     for (Map.Entry<String, String> mapping : charEncodings.entrySet()) {
+       url = url.replace(mapping.getKey(), mapping.getValue());
+     }
+     return url;
    }
-
-  public static String getResourceUrlAsString(String name) {
-    String url = getResource(name).toString();
-    for (Map.Entry<String, String> mapping : charEncodings.entrySet()) {
-      url = url.replaceAll(mapping.getKey(), mapping.getValue());
-    }
-    return url;
-  }
 
   /**
    * Converts an url to an uri. Escapes whitespaces if needed.
@@ -189,7 +210,7 @@ public abstract class ReflectUtil {
   public static Object instantiate(String className) {
     try {
       Class< ? > clazz = loadClass(className);
-      return clazz.newInstance();
+      return clazz.getDeclaredConstructor().newInstance();
     }
     catch (Exception e) {
       throw LOG.exceptionWhileInstantiatingClass(className, e);
@@ -198,7 +219,7 @@ public abstract class ReflectUtil {
 
   public static <T> T instantiate(Class<T> type) {
     try {
-      return type.newInstance();
+      return type.getDeclaredConstructor().newInstance();
     }
     catch (Exception e) {
       throw LOG.exceptionWhileInstantiatingClass(type.getName(), e);
