@@ -33,23 +33,22 @@ import org.finos.fluxnova.bpm.engine.test.concurrency.ConcurrencyTestHelper;
 import org.finos.fluxnova.bpm.engine.test.util.ProcessEngineBootstrapRule;
 import org.finos.fluxnova.bpm.engine.test.util.ProcessEngineTestRule;
 import org.finos.fluxnova.bpm.engine.test.util.ProvidedProcessEngineRule;
-import org.junit.After;
-import org.junit.Before;
-import org.junit.ClassRule;
-import org.junit.Rule;
-import org.junit.Test;
-import org.junit.rules.RuleChain;
+import org.junit.jupiter.api.extension.RegisterExtension;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.finos.fluxnova.bpm.engine.test.util.ChainedExtension;
 import org.mockito.Mockito;
 
 public class SignalEventConcurrencyTest extends ConcurrencyTestHelper {
 
-  @ClassRule
+  @RegisterExtension
   public static ProcessEngineBootstrapRule bootstrapRule = new ProcessEngineBootstrapRule();
   protected ProvidedProcessEngineRule engineRule = new ProvidedProcessEngineRule(bootstrapRule);
   protected ProcessEngineTestRule testRule = new ProcessEngineTestRule(engineRule);
 
-  @Rule
-  public RuleChain ruleChain = RuleChain.outerRule(engineRule).around(testRule);
+  @RegisterExtension
+  public ChainedExtension ruleChain = ChainedExtension.outerExtension(engineRule).around(testRule);
 
   protected RepositoryService repositoryService;
   protected RuntimeService runtimeService;
@@ -58,7 +57,7 @@ public class SignalEventConcurrencyTest extends ConcurrencyTestHelper {
   protected EventHandler evSpy;
 
   @Override
-  @Before
+  @BeforeEach
   public void init() {
     processEngineConfiguration = engineRule.getProcessEngineConfiguration();
     runtimeService = engineRule.getRuntimeService();
@@ -71,7 +70,7 @@ public class SignalEventConcurrencyTest extends ConcurrencyTestHelper {
     processEngineConfiguration.getEventHandlers().put("signal", evSpy);
   }
 
-  @After
+  @AfterEach
   public void tearDown() {
     processEngineConfiguration.getEventHandlers().put("signal", signalEventHandler);
   }
@@ -120,8 +119,8 @@ public class SignalEventConcurrencyTest extends ConcurrencyTestHelper {
     final Throwable exception = signalThread.getException();
     assertThat(exception).isInstanceOf(NullValueException.class);
     assertThat(exception).hasMessage(
-        String.format("Cannot restore state of process instance %s: list of executions is empty",
-            mainTask.getProcessInstanceId()));
+      "Cannot restore state of process instance %s: list of executions is empty".formatted(
+        mainTask.getProcessInstanceId()));
   }
 
 }
