@@ -20,9 +20,9 @@ import org.finos.fluxnova.bpm.engine.ProcessEngine;
 import org.finos.fluxnova.bpm.engine.impl.cfg.StandaloneInMemProcessEngineConfiguration;
 import org.finos.fluxnova.bpm.model.bpmn.Bpmn;
 import org.finos.fluxnova.bpm.model.bpmn.BpmnModelInstance;
-import org.junit.After;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
 /**
  * @author Daniel Meyer
@@ -33,7 +33,7 @@ public class MultiEngineCommandContextTest {
   protected ProcessEngine engine1;
   protected ProcessEngine engine2;
 
-  @Before
+  @BeforeEach
   public void startEngines() {
     engine1 = createProcessEngine("engine1");
     engine2 = createProcessEngine("engine2");
@@ -41,7 +41,7 @@ public class MultiEngineCommandContextTest {
     StartProcessInstanceOnEngineDelegate.ENGINES.put("engine2", engine2);
   }
 
-  @After
+  @AfterEach
   public void closeEngine1() {
     try {
       engine1.close();
@@ -51,7 +51,7 @@ public class MultiEngineCommandContextTest {
     }
   }
 
-  @After
+  @AfterEach
   public void closeEngine2() {
     try {
       engine2.close();
@@ -61,7 +61,7 @@ public class MultiEngineCommandContextTest {
     }
   }
 
-  @After
+  @AfterEach
   public void removeEngines() {
     StartProcessInstanceOnEngineDelegate.ENGINES.clear();
   }
@@ -129,7 +129,7 @@ public class MultiEngineCommandContextTest {
     StandaloneInMemProcessEngineConfiguration processEngineConfiguration = new StandaloneInMemProcessEngineConfiguration();
 
     processEngineConfiguration.setProcessEngineName(name);
-    processEngineConfiguration.setJdbcUrl(String.format("jdbc:h2:mem:%s", name));
+    processEngineConfiguration.setJdbcUrl("jdbc:h2:mem:%s".formatted(name));
     processEngineConfiguration.setEnforceHistoryTimeToLive(false);
 
     return processEngineConfiguration.buildProcessEngine();
