@@ -96,23 +96,24 @@ public class QuerySessionFactory extends StandaloneProcessEngineConfiguration {
 
     StringBuilder builder = new StringBuilder();
     for (String mappingFile: mappings) {
-      builder.append(String.format("<mapper resource=\"%s\" />\n", mappingFile));
+      builder.append("<mapper resource=\"%s\" />\n".formatted(mappingFile));
     }
 
-    String mappingsFileTemplate = "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n" +
-        "\n" +
-        "<!DOCTYPE configuration PUBLIC \"-//mybatis.org//DTD Config 3.0//EN\" \"http://mybatis.org/dtd/mybatis-3-config.dtd\">\n" +
-        "\n" +
-        "<configuration>\n" +
-        "	<settings>\n" +
-        "		<setting name=\"lazyLoadingEnabled\" value=\"false\" />\n" +
-        "	</settings>\n" +
-        "	<mappers>\n" +
-        "%s\n" +
-        "	</mappers>\n" +
-        "</configuration>";
+    String mappingsFileTemplate = """
+        <?xml version="1.0" encoding="UTF-8"?>
+        
+        <!DOCTYPE configuration PUBLIC "-//mybatis.org//DTD Config 3.0//EN" "http://mybatis.org/dtd/mybatis-3-config.dtd">
+        
+        <configuration>
+        	<settings>
+        		<setting name="lazyLoadingEnabled" value="false" />
+        	</settings>
+        	<mappers>
+        %s
+        	</mappers>
+        </configuration>""";
 
-    return String.format(mappingsFileTemplate, builder.toString());
+    return mappingsFileTemplate.formatted(builder.toString());
   }
 
   public ProcessEngineConfigurationImpl getWrappedConfiguration() {
