@@ -24,11 +24,11 @@ import java.util.Set;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
-import javax.servlet.FilterChain;
-import javax.servlet.ServletContext;
-import javax.servlet.ServletException;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
+import jakarta.servlet.FilterChain;
+import jakarta.servlet.ServletContext;
+import jakarta.servlet.ServletException;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
 
 import org.finos.fluxnova.bpm.admin.Admin;
 import org.finos.fluxnova.bpm.admin.AdminRuntimeDelegate;
@@ -132,7 +132,7 @@ public class ProcessEnginesFilter extends AbstractTemplateFilter {
       }
 
       if (INDEX_PAGE.equals(pageUri)) {
-        response.sendRedirect(String.format("%s%s/app/%s/%s/", contextPath, applicationPath,
+        response.sendRedirect("%s%s/app/%s/%s/".formatted(contextPath, applicationPath,
           appName, engineName));
         return;
       }
@@ -159,7 +159,7 @@ public class ProcessEnginesFilter extends AbstractTemplateFilter {
     if (appName == null) {
 
       // redirect to {defaultApp}/{defaultEngineName}
-      response.sendRedirect(String.format("%s%s/app/%s/%s/", contextPath, applicationPath,
+      response.sendRedirect("%s%s/app/%s/%s/".formatted(contextPath, applicationPath,
         DEFAULT_APP, getDefaultEngineName()));
     } else
 
@@ -167,7 +167,7 @@ public class ProcessEnginesFilter extends AbstractTemplateFilter {
     // redirect to /app/{defaultEngineName}/
     if (engineName == null) {
       // redirect to {defaultApp}/{defaultEngineName}
-      response.sendRedirect(String.format("%s%s/app/%s/%s/", contextPath, applicationPath,
+      response.sendRedirect("%s%s/app/%s/%s/".formatted(contextPath, applicationPath,
         appName, getDefaultEngineName()));
     } else {
 
@@ -178,7 +178,7 @@ public class ProcessEnginesFilter extends AbstractTemplateFilter {
         if (!setupPage) {
           // redirect to setup
           String setupPath = "%s%s/app/admin/%s/setup/#/setup";
-          response.sendRedirect(String.format(setupPath, contextPath, applicationPath, engineName));
+          response.sendRedirect(setupPath.formatted(contextPath, applicationPath, engineName));
         } else {
           // serve the index page as a setup page
           // setup will be handled by app
@@ -189,7 +189,7 @@ public class ProcessEnginesFilter extends AbstractTemplateFilter {
           // correctly serving index page
           serveIndexPage(appName, engineName, applicationPath, contextPath, response, request.getServletContext());
         } else {
-          response.sendRedirect(String.format("%s%s/app/%s/%s/", contextPath, applicationPath,
+          response.sendRedirect("%s%s/app/%s/%s/".formatted(contextPath, applicationPath,
             appName, engineName));
         }
       }
@@ -230,7 +230,7 @@ public class ProcessEnginesFilter extends AbstractTemplateFilter {
       chain.doFilter(request, response);
     } else {
       // strip engine namespace and check if resource would exist
-      String cleanAppUri = String.format("%s/app/%s/%s", applicationPath, appName, pageUri);
+      String cleanAppUri = "%s/app/%s/%s".formatted(applicationPath, appName, pageUri);
 
       if (hasWebResource(cleanAppUri)) {
         request.getRequestDispatcher(cleanAppUri).forward(request, response);
@@ -295,12 +295,12 @@ public class ProcessEnginesFilter extends AbstractTemplateFilter {
                                       String contextPath,
                                       String cspNonce) {
     return data.replace(APP_ROOT_PLACEHOLDER, contextPath + applicationPath)
-               .replace(BASE_PLACEHOLDER, String.format("%s%s/app/%s/%s/", contextPath,
+               .replace(BASE_PLACEHOLDER, "%s%s/app/%s/%s/".formatted(contextPath,
                  applicationPath, appName, engineName))
                .replace(PLUGIN_PACKAGES_PLACEHOLDER, createPluginPackagesStr(appName,
                  applicationPath, contextPath))
                .replace(PLUGIN_DEPENDENCIES_PLACEHOLDER, createPluginDependenciesStr(appName))
-               .replace(CSP_NONCE_PLACEHOLDER, cspNonce == null ? "" : String.format("nonce=\"%s\"", cspNonce));
+               .replace(CSP_NONCE_PLACEHOLDER, cspNonce == null ? "" : "nonce=\"%s\"".formatted(cspNonce));
   }
 
   protected <T extends AppPlugin> CharSequence createPluginPackagesStr(String appName,
@@ -316,7 +316,7 @@ public class ProcessEnginesFilter extends AbstractTemplateFilter {
       }
 
       String pluginId = plugin.getId();
-      String definition = String.format(pluginPackageFormat, appName, pluginId, contextPath,
+      String definition = pluginPackageFormat.formatted(appName, pluginId, contextPath,
         applicationPath, appName, pluginId);
 
       builder.append(definition);
@@ -336,7 +336,7 @@ public class ProcessEnginesFilter extends AbstractTemplateFilter {
       }
 
       String pluginId = plugin.getId();
-      String definition = String.format(pluginDependencyFormat, appName, pluginId, appName, pluginId);
+      String definition = pluginDependencyFormat.formatted(appName, pluginId, appName, pluginId);
 
       builder.append(definition);
     }
